<resources>
    <string name="app_name">Media Tracker</string>
    <string name="synopsis_card_title">Synopsis</string>
    <string name="of">%1$d of %2$d</string>
    <string name="book_cover">Image of the book cover</string>
    <string name="next_page_button">Next page button</string>
    <string name="previous_page_button">Previous page button</string>
    <string name="details">Details</string>
    <string name="author">Author</string>
    <string name="first_published">First Published</string>
    <string name="genres">Genres</string>
    <string name="publisher">Publisher</string>
    <string name="reading_progress">Reading progress</string>
    <string name="home_list_item_page_count">%1$dp</string>
    <string name="book">Book</string>
    <string name="book_cover_image">Book cover image</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
</resources>